tests/baselines/reference/typeParameterUsedAsTypeParameterConstraint4.errors.txt
==== tests/cases/conformance/types/objectTypeLiteral/callSignatures/typeParameterUsedAsTypeParameterConstraint4.ts (29 errors) ====
    // Type parameters are in scope in their own and other type parameter lists
    // Some negative cases
    
    class C<T, U extends T, V extends U> {
               ~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                            ~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        z: W; // error
           ~
!!! error TS2304: Cannot find name 'W'.
        foo<W extends V>(x: W): T {
            var r: T;
            return x;
                   ~
!!! error TS2323: Type 'W' is not assignable to type 'T'.
        }
    }
    
    interface I<T, U extends T, V extends U> {
                   ~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                ~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        x: T;
        y: U;
        z: W; // error
           ~
!!! error TS2304: Cannot find name 'W'.
        foo<W extends V>(x: W): T;
    }
    
    function foo<T, U extends T>(x: T, y: U): V { // error
                    ~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                              ~
!!! error TS2304: Cannot find name 'V'.
                                              ~
!!! error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value or consist of a single 'throw' statement.
        function bar<V extends T, W extends U>(): X { // error
                                                  ~
!!! error TS2304: Cannot find name 'X'.
                                                  ~
!!! error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value or consist of a single 'throw' statement.
            function baz<X extends W, Y extends V>(a: X, b: Y): T {
                x = y;
                ~
!!! error TS2323: Type 'U' is not assignable to type 'T'.
                return y;
                       ~
!!! error TS2323: Type 'U' is not assignable to type 'T'.
            }
        }
    }
    
    function foo2<U extends T, T>(x: T, y: U): W { // error
                  ~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                               ~
!!! error TS2304: Cannot find name 'W'.
                                               ~
!!! error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value or consist of a single 'throw' statement.
        function bar<V extends T, W extends U>(): Y { // error
                                                  ~
!!! error TS2304: Cannot find name 'Y'.
                                                  ~
!!! error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value or consist of a single 'throw' statement.
            function baz<X extends W, Y extends V>(a: X, b: Y): T {
                x = y;
                ~
!!! error TS2323: Type 'U' is not assignable to type 'T'.
                return y;
                       ~
!!! error TS2323: Type 'U' is not assignable to type 'T'.
            }
        }
    }
    
    var f3 = <T, U extends T>(x: T, y: U) => {
                 ~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        function bar<V extends T, W extends U>(r: X, s: Y) { // error
                                                  ~
!!! error TS2304: Cannot find name 'X'.
                                                        ~
!!! error TS2304: Cannot find name 'Y'.
            var g = <X extends W, Y extends V>(a: X, b: Y): T => {
                x = y;
                ~
!!! error TS2323: Type 'U' is not assignable to type 'T'.
                return y;
                       ~
!!! error TS2323: Type 'U' is not assignable to type 'T'.
            }
        }
    }
    
    var f4 = <U extends T, T>(x: V, y: X) => { // error
              ~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                 ~
!!! error TS2304: Cannot find name 'V'.
                                       ~
!!! error TS2304: Cannot find name 'X'.
        function bar<V extends T, W extends U>() {
            var g = <X extends W, Y extends V>(a: X, b: Y): T => {
                x = y;
                return y;
            }
        }
    }